# BlockFlow

./: .env.example  .gitignore  .npmignore  AGENTS.md  README.md  app.py  package.json  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
backend/: civitai_client.py  config.py  db.py  installer_pod_sweeper.py  lora_metadata.py  lora_routes.py  main.py  preset_resolver.py  preset_routes.py  routes.py  runpod_api.py  services.py  settings_routes.py  settings_store.py  settings_validators.py  topaz_image_upscaler.py  topaz_upscaler.py  wizard_routes.py
docs/: README.md  npm-release.md
frontend/: .npmignore  package-lock.json  package.json
prompt_packs/: UGC_Prompts.json  bartender_beach_tiki.json  bartender_dive_speakeasy.json  bartender_upscale_lounge.json  beach_bar_club.json  beach_golden_hour.json  beach_lounger_selfie.json  beach_selfie_closeup.json  bikini_asymmetric.json  bikini_back_beach_sunset.json  bikini_back_resort_pool.json  bikini_back_tropical_island.json  bikini_bandeau_retro.json  bikini_crochet_textured.json  bikini_hardware_detail.json  bikini_prompts.json  bikini_prompts2.json  bikini_string_triangle.json  blue_hour_cinematic.json  boat_yacht_day.json  bunny_yeager_poolside.json  candid_bikini_prompts.json  candid_prompts.json  carlota_guerrero_ethereal.json  casual_bed_prompts.json  cat_ears_on_bed.json  charlotte_wales_beauty.json  christmas_prompts.json  cozy_indoor_lounge.json  dataset_prompts.json  ellen_von_unwerth_glamour.json  empty_prompts.json  glam_nights.json  golden_hour_balcony.json  good_travel_photos.json  (+64 more)
(+178 files in other folders)
