[project]
name = "blockflow"
version = "0.1.11"
description = "Local-only visual pipeline UI for AI image/video generation via RunPod serverless"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "boto3>=1.34",
    "loguru>=0.7",
    "curl_cffi>=0.7",
    "Pillow>=10",
    "comfy-gen>=0.2,<0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.6",
    "httpx>=0.27",  # for fastapi.testclient
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
